# ECGDisplaySystem

./: .gitignore  CMakeLists.txt  ECGDisplaySystem.pro  README.md  res.qrc  xmake.lua
.github/workflows/: cmake-single-platform.yml
i18n/: ECGDisplaySystem_zh_CN.qm  ECGDisplaySystem_zh_CN.ts
src/: customs.cpp  customs.h  data_parser.cpp  data_parser.h  global.h  homewindow.cpp  homewindow.h  homewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitorwindow.cpp  monitorwindow.h  monitorwindow.ui  serialport_io.cpp  serialport_io.h  settingwindow.cpp  settingwindow.h  settingwindow.ui
